force-app/main/default/objects/Operations_Queue__c/Operations_Queue__c.object-meta.xml
<CustomObject>
    <label>Operations Queue</label>
    <nameField>
        <label>Operations Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>