force-app/main/default/objects/Operations_Queue__c/fields/First_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_of_Month__c</fullName>
    <formula>DAY(TODAY())=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First of Month</label>
    <type>Checkbox</type>
</CustomField>