force-app/main/default/objects/Operations_Queue__c/fields/Genomic_Data_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Genomic_Data_Freeze__c</fullName>
    <label>Genomic Data Freeze [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>