force-app/main/default/objects/Operations_Queue__c/fields/Genomic_Data_Freeze_new__c.field-meta.xml
<CustomField>
    <fullName>Genomic_Data_Freeze_new__c</fullName>
    <label>Genomic Data Freeze</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>