force-app/main/default/objects/Operations_Queue__c/fields/HTP_Analysis_Queue__c.field-meta.xml
<CustomField>
    <fullName>HTP_Analysis_Queue__c</fullName>
    <label>HTP Analysis Queue [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>