force-app/main/default/objects/Operations_Queue__c/fields/HTP_Analysis_Queue_new__c.field-meta.xml
<CustomField>
    <fullName>HTP_Analysis_Queue_new__c</fullName>
    <label>HTP Analysis Queue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>