force-app/main/default/objects/Operations_Queue__c/fields/Phenotype_Matrices__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Matrices__c</fullName>
    <label>Phenotype Matrices [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>