force-app/main/default/objects/Operations_Queue__c/fields/Phenotype_Matrices_new__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Matrices_new__c</fullName>
    <label>Phenotype Matrices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>