force-app/main/default/objects/Operations_Queue__c/fields/Sequencing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Queue__c</fullName>
    <label>Sequencing Queue [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>