force-app/main/default/objects/Operations_Queue__c/fields/Sequencing_Queue_new__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Queue_new__c</fullName>
    <label>Sequencing Queue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>