force-app/main/default/objects/Operations_Queue__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>